# YMdantic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pypi-release.yml  tests.yml
examples/: chart.py
tests/: conftest.py
tests/account/: test_settings.py
tests/albums/: test_get_album_with_tracks.py
tests/search/: test_search_instant_mixed.py
tests/tracks/: test_get_track.py  test_get_track_download_info.py  test_get_track_file_info.py  test_get_tracks.py
ymdantic/: __init__.py  client.py  mixins.py
ymdantic/adapters/: __init__.py  aiohttp_method.py  pydantic_factory.py  to_camel.py  to_query_params.py
ymdantic/client/: __init__.py  yandex_music.py
ymdantic/client/session/: __init__.py  aiohttp_client.py  aiohttp_method.py
ymdantic/enums/: __init__.py  editorial_artists.py  editorial_compilation.py  editorial_new_releases.py  editorial_promotion.py  language.py  open_playlist.py  special.py
ymdantic/exceptions/: __init__.py  custom_exceptions.py
ymdantic/models/: __init__.py  action_button.py  agent.py  base.py  chart_position.py  content_restrictions.py  cover.py  custom_wave.py  error.py  pager.py  response.py  s3.py  theme.py  trailer.py
ymdantic/models/account/: __init__.py  settings.py
ymdantic/models/albums/: __init__.py  album.py  label.py
ymdantic/models/artists/: __init__.py  artist.py  artist_data.py  artist_track_chart_position.py  band_link_scanner_link.py  concert.py  counts.py  description.py  extra_action.py  ratings.py  social_link.py  video.py
ymdantic/models/clips/: clip.py
ymdantic/models/concerts/: city_case_forms.py  concert.py
ymdantic/models/landing/: __init__.py  album.py  artist.py  chart.py  chart_block.py  cover.py  in_style.py  landing_album.py  landing_artist.py  landing_cover.py  landing_open_playlist.py  landing_playlist.py  landing_promotion.py  liked_playlist.py  open_playlist.py  personal_playlist.py  playlist.py  special.py  view_all_action.py  waves.py
ymdantic/models/landing/editorial/: __init__.py  new_releases.py  response.py
ymdantic/models/landing/skeleton/: __init__.py  skeleton_response.py  tab_block.py  tab_data.py  tab_source.py  tabs_block.py  tabs_source.py
ymdantic/models/landing3/: __init__.py  block.py  chart.py  menu.py
ymdantic/models/playlists/: __init__.py  cover.py  owner.py  playlist.py  playlist_cover.py  playlist_track.py  tag.py  track.py
ymdantic/models/search/: __init__.py  base.py  results.py
ymdantic/models/tracks/: __init__.py  album.py  derived_colors.py  download_info.py  fade.py  file_info.py  lyrics_info.py  major.py  podcast.py  position.py  r128.py  track.py  track_album.py
