[project]
name = "ymdantic"
version = "0.2.0"
description = "Фреймворк предоставляющий доступ к API Яндекс Музыки (с Pydantic валидацией)"
authors = [{ name = "KatantDev", email = "vlad26@mail.ru" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "aiohttp>=3.9.0,<4",
    "pydantic>=2.4,<3",
    "certifi>=2025,<2026",
    "strenum>=0.4.15,<0.5",
    "dataclass-rest>=0.5.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19,<2",
    "ruff>=0.14,<1",
    "pre-commit>=4,<5",
    "pytest>=9.0.2",
    "anyio>=4.12.0",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
src = ["ymdantic"]
exclude = [
    ".git",
    "build",
    "dist",
    "venv",
    ".venv",
    "scripts",
    "*.egg-info",
]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", # Error
    "F", # Pyflakes
    "W", # Pycodestyle
    "C90", # McCabe complexity
    "I", # Isort
    "N", # pep8-naming
    "D", # Pydocstyle
    "ANN", # Pytype annotations
    "S", # Bandit
    "B", # Bugbear
    "COM", # Commas
    "C4", # Comprehensions
    "ISC", # Implicit string concat
    "PIE", # Unnecessary code
    "T20", # Catch prints
    "PYI", # validate pyi files
    "Q", # Checks for quotes
    "RSE", # Checks raise statements
    "RET", # Checks return statements
    "SLF", # Self checks
    "SIM", # Simplificator
    "PTH", # Pathlib checks
    "ERA", # Checks for commented out code
    "PL", # PyLint checks
    "RUF", # Specific to Ruff checks
]
ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D104", # Missing docstring in public package
    "D100", # Missing docstring in public module
    "ANN401", # typing.Any are disallowed in `**kwargs
    "D203",
    "D212",
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["T201"]
"ymdantic/client/yandex_music.py" = ["D102"]
"tests/*" = ["S101","D103"]

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
python_version = "3.11"
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[[tool.mypy.overrides]]
module = "ymdantic.client.yandex_music"
disable_error_code = ["call-arg"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
